--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -9,13 +9,13 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             div.pure-u-1-2#addressDetails
                 if address.addressLine1
-                    span#address1.block.bold #{address.addressLine1}
+                    span#curfew-address1.block.bold #{address.addressLine1}
                 if address.addressLine2
-                    span#address2.block.bold #{address.addressLine2}
+                    span#curfew-address2.block.bold #{address.addressLine2}
                 if address.addressTown
-                    span#town.block.bold #{address.addressTown}
+                    span#curfew-town.block.bold #{address.addressTown}
                 if address.postCode
-                    span#postCode.block.bold #{address.postCode}
+                    span#curfew-postCode.block.bold #{address.postCode}
             div.pure-u-1-2.alignRight
                 if user.role === 'RO'
                     a#addressEditLink(href="/hdc/curfew/curfewAddressReview/" + nomisId) Change these details
@@ -26,7 +26,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div#dischargeContactName
             if address.telephone
-                span#telephone.bold #{address.telephone}
+                span#curfew-telephone.bold #{address.telephone}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -35,11 +35,11 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-g
             if address.occupier
                 div.pure-u-md-2-5
-                    span#occupierName.bold #{address.occupier.name}
+                    span#curfew-occupierName.bold #{address.occupier.name}
                 div.pure-u-md-1-5
-                    span#occupierAge.bold #{address.occupier.age}
+                    span#curfew-occupierAge.bold #{address.occupier.age}
                 div.pure-u-md-2-5
-                    span#occupierRelation.bold #{address.occupier.relationship}
+                    span#curfew-occupierRelation.bold #{address.occupier.relationship}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -51,11 +51,11 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                     if(resident.name != '' || resident.age != '' || resident.relation != '')
                         div.pure-u-1.resident
                             div.pure-u-md-2-5
-                                span.bold(id="residentName-" + index) #{resident.name}
+                                span.bold(id="curfew-residentName-" + index) #{resident.name}
                             div.pure-u-md-1-5
-                                span.bold(id="residentAge-" + index) #{resident.age}
+                                span.bold(id="curfew-residentAge-" + index) #{resident.age}
                             div.pure-u-md-2-5
-                                span.bold(id="residentRelation-" + index) #{resident.relation}
+                                span.bold(id="curfew-residentRelation-" + index) #{resident.relation}
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
@@ -65,7 +65,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
     div.pure-u-1-2
         div#dischargeContactNumber
             if address.cautionedAgainstResident
-                span#cautioned.bold #{address.cautionedAgainstResident}
+                span#curfew-cautioned.bold #{address.cautionedAgainstResident}
 
 if data.curfew && data.curfew.curfewAddressReview
     -var addressReview = data.curfew.curfewAddressReview || {}
@@ -78,26 +78,26 @@ if data.curfew && data.curfew.curfewAddressReview
                     span Does the homeowner/landlord give informed consent to HDC at the address?
         div.pure-u-1-2
             div#dischargeHomeAddress
-                span#consent.bold #{addressReview.consent}
+                span#curfew-consent.bold #{addressReview.consent}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Was a home visit conducted in this case?
         div.pure-u-1-2
-            span#homeVisit.bold #{addressReview.homeVisitConducted}
+            span#curfew-homeVisit.bold #{addressReview.homeVisitConducted}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Does the address have an electricity supply?
         div.pure-u-1-2
             if addressReview.electricity
-                span#electricity.bold #{addressReview.electricity}
+                span#curfew-electricity.bold #{addressReview.electricity}
 
     div.pure-g.borderBottomLight.midPaddingTopBottom
         div.pure-u-1-2
             span Could this offender be managed safely at address?
         div.pure-u-1-2
-            span#deemedSafe.bold #{addressSafety.deemedSafe}
+            span#curfew-deemedSafe.bold #{addressSafety.deemedSafe}
 else
     div.pure-g.midPaddingTopBottom
         div.pure-u-1-2
