--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -17,6 +17,6 @@ block content
             if address
                 p The following address has been requested by the offender and checked by the RO.
 
-                +addressDetail('', address, review, addressSafety)
+                +addressDetail('curfew', address, review, addressSafety)
 
             include ../includes/returnButton
