--- a/server/views/review/address.pug
+++ b/server/views/review/address.pug
@@ -19,4 +19,4 @@ block content
 
                 +addressDetail('curfew', address, review, addressSafety)
 
-            include ../includes/returnButton
+            include ../includes/taskListReturn
