--- a/server/views/review/conditions.pug
+++ b/server/views/review/conditions.pug
@@ -16,4 +16,4 @@ block content
         else
             h2#message.heading-medium No additional conditions have been selected.
 
-        include ../includes/returnButton
+        include ../includes/taskListReturn
