--- a/server/views/review/reporting.pug
+++ b/server/views/review/reporting.pug
@@ -27,4 +27,4 @@ block content
                 span.block Telephone
                 span#reportingTelephone.block.bold #{reporting.telephone}
 
-    include ../includes/returnButton
+    include ../includes/taskListReturn
