--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -34,4 +34,4 @@ block content
                 span#victimLiaison.block.bold #{risk.victimLiaison}
                 span#victimLiaisonDetails.block #{risk.victimLiaisonDetails}
 
-    include ../includes/returnButton
+    include ../includes/taskListReturn
