--- a/server/views/caseList/ROTable.pug
+++ b/server/views/caseList/ROTable.pug
@@ -46,3 +46,6 @@ table#hdcEligiblePrisoners.largeMarginBottom
                             else
                                 a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
                                     | View
+                        else if ['PROCESSING_CA', 'APPROVAL', 'DECIDED'].includes(prisoner.stage)
+                            a.button.button-secondary.fullWidth.center(href="hdc/review/licence/" + prisoner.offenderNo role="button")
+                                | Review
