--- a/server/views/licenceDetails/reportingInstructions.pug
+++ b/server/views/licenceDetails/reportingInstructions.pug
@@ -13,7 +13,7 @@ div.pure-g.borderBottomLight.midPaddingTopBottom
                 if reportingInstructions.name
                     span#reportingName #{reportingInstructions.name}
             div.pure-u-1-3.alignRight
-                if user.role === 'RO'
+                if (stage === 'PROCESSING_RO'  && user.role === 'RO')
                     a#reportingEditLink(href="/hdc/reporting/reportingInstructions/" + nomisId) Change these details
 
 div.pure-g.borderBottomLight.midPaddingTopBottom
