--- a/server/views/licenceDetails/licenceDetails.pug
+++ b/server/views/licenceDetails/licenceDetails.pug
@@ -2,6 +2,9 @@ extends ../layout
 
 block content
 
+    div.back-link-container.smallPaddingTop
+        a.link-back(href="javascript: window.history.back();") Back
+
     include ./licenceSummary
 
     div.paddingBottom.smallPaddingTop
