--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -2,6 +2,9 @@ extends ../layout
 
 block content
 
+    div.back-link-container.smallPaddingTop
+        a.link-back(href="javascript: window.history.back();") Back
+
     include ../licenceDetails/licenceSummary
 
     include ../includes/caseListReturn
