Change Review button back to View

--- a/server/views/caseList/CATable.pug
+++ b/server/views/caseList/CATable.pug
@@ -56,4 +56,4 @@ table#hdcEligiblePrisoners.largeMarginBottom
                                     | View
                         else if ['PROCESSING_RO', 'APPROVAL', 'DECIDED'].includes(prisoner.stage)
                             a.button.button-secondary.fullWidth.center(href="hdc/review/licence/" + prisoner.offenderNo role="button")
-                                | Review
+                                | View
