--- a/server/views/caseList/ROTable.pug
+++ b/server/views/caseList/ROTable.pug
@@ -48,4 +48,4 @@ table#hdcEligiblePrisoners.largeMarginBottom
                                     | View
                         else if ['PROCESSING_CA', 'APPROVAL', 'DECIDED'].includes(prisoner.stage)
                             a.button.button-secondary.fullWidth.center(href="hdc/review/licence/" + prisoner.offenderNo role="button")
-                                | Review
+                                | View
