--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -4,7 +4,7 @@ div.largeMarginBottom.borderTop
     div.borderBottomLight.largeMarginBottom
 
     div.pure-g
-        div.pure-u-3-4
+        div#submitPcaStatus.pure-u-3-4
             if licenceStatus.stage === 'PROCESSING_RO'
                 if allowedTransitions.roToCa
                     | Ready to submit
