--- a/server/views/review/includes/licenceSummary.pug
+++ b/server/views/review/includes/licenceSummary.pug
@@ -1,10 +1,10 @@
-include ./additionalConditions
+include additionalConditions
 
 h1.heading-large Licence details
 
 div.largeMarginBottom
 
-    include ../taskList/prisonerDetails
+    include ../../taskList/prisonerDetails
 
     if data.proposedAddress && data.proposedAddress.curfewAddress && data.proposedAddress.curfewAddress.preferred
         include curfewAddress
@@ -17,7 +17,7 @@ div.largeMarginBottom
         +additionalConditions()
 
     if data.risk && data.risk.riskManagement
-        include ./riskManagement
+        include riskManagement
 
     if data.reporting && data.reporting.reportingInstructions
-        include ./reportingInstructions
+        include reportingInstructions
