--- a/server/views/review/licence.pug
+++ b/server/views/review/licence.pug
@@ -5,6 +5,6 @@ block content
     div.back-link-container.smallPaddingTop
         a.link-back(href="javascript: window.history.back();") Back
 
-    include ../licenceDetails/licenceSummary
+    include includes/licenceSummary
 
     include ../includes/caseListReturn
