--- a/server/views/review/licenceDetails.pug
+++ b/server/views/review/licenceDetails.pug
@@ -5,7 +5,7 @@ block content
     div.back-link-container.smallPaddingTop
         a.link-back(href="javascript: window.history.back();") Back
 
-    include ./licenceSummary
+    include includes/licenceSummary
 
     div.paddingBottom.smallPaddingTop
         div.pure-u-1.inlineButtons
