--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -174,6 +174,10 @@ $path: "/public/images/";
     padding-left: 7px;
 }
 
+.padLeft15 {
+    padding-left: 15px;
+}
+
 .alignRight {
     text-align: right;
 }
