--- a/server/views/licenceDetails/curfewAddress.pug
+++ b/server/views/licenceDetails/curfewAddress.pug
@@ -1,4 +1,4 @@
-h2.heading-medium.borderBottomLightThick.separatorTitle Proposed curfew address
+h2#curfewAddressDetails.heading-medium.borderBottomLightThick.separatorTitle Proposed curfew address
 
 -var address = data.proposedAddress.curfewAddress.preferred
 
