--- a/server/views/licenceDetails/curfewHours.pug
+++ b/server/views/licenceDetails/curfewHours.pug
@@ -1,4 +1,4 @@
-h2.heading-medium.borderBottomLightThick.separatorTitle Proposed HDC curfew hours
+h2#curfewHoursDetails.heading-medium.borderBottomLightThick.separatorTitle Proposed HDC curfew hours
 
 -var hours = data.curfew.curfewHours
 
