--- a/server/views/licenceDetails/reportingInstructions.pug
+++ b/server/views/licenceDetails/reportingInstructions.pug
@@ -1,4 +1,4 @@
-h2.heading-medium.borderBottomLightThick.separatorTitle Reporting instructions
+h2#reportingDetails.heading-medium.borderBottomLightThick.separatorTitle Reporting instructions
 
 -var reportingInstructions = data.reporting.reportingInstructions
 
