--- a/server/views/licenceDetails/riskManagement.pug
+++ b/server/views/licenceDetails/riskManagement.pug
@@ -1,4 +1,4 @@
-h2.heading-medium.borderBottomLightThick.separatorTitle Risk management and victim liaison
+h2#riskDetails.heading-medium.borderBottomLightThick.separatorTitle Risk management and victim liaison
 
 -var risk = data.risk.riskManagement
 
