--- a/server/views/send/CAtoDM.pug
+++ b/server/views/send/CAtoDM.pug
@@ -1,4 +1,4 @@
-div.pure-g
+div.pure-g.largePaddingBottom
     div.pure-u-2-3
         h2.heading-large.midPaddingBottom Submit for approval
         p.lede The licence is ready to be submitted for approval by the decision maker or you can return to the task list and submit it later.
@@ -10,5 +10,4 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="CA")
             input(type="hidden" name="receiver" value="DM")
-            input#continueBtn.requiredButton.button.midMarginBottom.button-start(type="submit" value="Submit")
-        a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to task list
+            include includes/sendButtons
