--- a/server/views/send/CAtoRO.pug
+++ b/server/views/send/CAtoRO.pug
@@ -1,4 +1,4 @@
-div.pure-g
+div.pure-g.largePaddingBottom
     div.pure-u-2-3
         h2.heading-large.midPaddingBottom Submit to Responsible Officer
         p.lede The proposed address information is ready to be submitted to the RO or you can return to your dashboard and submit it later.
@@ -17,5 +17,4 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="CA")
             input(type="hidden" name="receiver" value="RO")
-            input#continueBtn.requiredButton.button.midMarginBottom.button-start(type="submit" value="Submit")
-        a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to task list
+            include includes/sendButtons
