--- a/server/views/send/DM.pug
+++ b/server/views/send/DM.pug
@@ -1,4 +1,4 @@
-div.pure-g
+div.pure-g.largePaddingBottom
     div.pure-u-2-3
         h2.heading-large.midPaddingBottom Submit to the Prison Case Admin
         p.lede The HDC decision can now be submitted back to the Prison Case Admin or you can return to the task list and send it later.
@@ -10,5 +10,4 @@ div#continueBtns.pure-g.paddingBottom
             input(type="hidden" name="nomisId" value=nomisId)
             input(type="hidden" name="sender" value="DM")
             input(type="hidden" name="receiver" value="CA")
-            input#continueBtn.requiredButton.button.midMarginBottom.button-start(type="submit" value="Submit")
-        a#backBtn.requiredButton.button.button-secondary(href="/hdc/taskList/" + nomisId role="button") Return to task list
+            include includes/sendButtons
