Update address layout

--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -72,12 +72,24 @@ $path: "/public/images/";
     padding-bottom: 5px;
 }
 
+.paddingTop {
+    padding-top: 20px;
+}
+
 .smallPaddingTop {
     padding-top: 10px;
 }
 
 .smallMarginTop {
     margin-top: 10px;
+}
+
+.midMarginTop {
+    margin-top: 20px;
+}
+
+.largeMarginTop {
+    margin-top: 30px;
 }
 
 .smallPaddingTopBottom {
