--- a/assets/sass/application.scss
+++ b/assets/sass/application.scss
@@ -6,6 +6,7 @@ $path: "/public/images/";
 // Take a look in /govuk-modules/_govuk-elements.scss to see which files are imported.
 @import 'govuk-elements';
 @import './layout';
+@import './tabs';
 
 #proposition-links li { color: $grey-4; }
 
