--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -3,6 +3,14 @@ extends ../layout
 block content
     h1#pageHeading.heading-large HDC eligible offenders
 
+    div#tabBar
+        ul
+            each tab in tabsForRole
+                li(class=selectedTabConfig.id === tab.id ? 'selected' : undefined)
+                    a(href=tab.id) #{tab.text}
+
+    h2.heading-medium #{selectedTabConfig.text}
+
     if user.role === 'CA'
         include CATable
 
