--- a/server/views/caseList/DMTable.pug
+++ b/server/views/caseList/DMTable.pug
@@ -41,8 +41,8 @@ table#hdcEligiblePrisoners.largeMarginBottom
                     td
                         if ['APPROVAL', 'DECIDED'].includes(prisoner.stage)
                             if ['Awaiting decision'].includes(prisoner.status)
-                                a.button.button-primary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
+                                a.button.button-primary.fullWidth.center(href="/hdc/taskList/" + prisoner.offenderNo role="button")
                                     | Start
                             else
-                                a.button.button-secondary.fullWidth.center(href="hdc/taskList/" + prisoner.offenderNo role="button")
+                                a.button.button-secondary.fullWidth.center(href="/hdc/taskList/" + prisoner.offenderNo role="button")
                                     | View
