--- a/server/views/caseList/index.pug
+++ b/server/views/caseList/index.pug
@@ -19,3 +19,6 @@ block content
 
     if user.role === 'DM'
         include DMTable
+
+block append scripts
+    script(src="/public/javascripts/pagination.js?"+version)
