--- a/server/views/review/risk.pug
+++ b/server/views/review/risk.pug
@@ -12,7 +12,7 @@ block content
 
     div.pure-u-md-1-2.paddingBottom
         div
-            h3.heading-medium Risk management
+            h3.heading-medium.smallMarginTop Risk management
 
             div.smallPaddingTop
                 p Are there any risk management planning actions that must take place prior to release?
