--- a/server/views/taskList/curfewAddressTask.pug
+++ b/server/views/taskList/curfewAddressTask.pug
@@ -1,7 +1,5 @@
-div.largeMarginBottom.borderTop
+div.taskListItem
     h2.heading-medium Proposed curfew address
-
-    div.borderBottomLight.largeMarginBottom
 
     if licenceStatus.decisions.bassReferralNeeded || licenceStatus.decisions.optedOut
         div.pure-g
