--- a/server/views/taskList/roSubmitTask.pug
+++ b/server/views/taskList/roSubmitTask.pug
@@ -1,7 +1,5 @@
-div.largeMarginBottom.borderTop
+div.taskListItem.submit
     h2.heading-medium Submit to PCA
-
-    div.borderBottomLight.largeMarginBottom
 
     div.pure-g
         div#submitPcaStatus.pure-u-3-4
