--- a/server/views/taskList/reportingInstructionsTask.pug
+++ b/server/views/taskList/reportingInstructionsTask.pug
@@ -1,7 +1,5 @@
-div.largeMarginBottom.borderTop
+div.taskListItem
     h2.heading-medium Reporting instructions
-
-    div.borderBottomLight.largeMarginBottom
 
     div.pure-g
         div.pure-u-3-4
